# systemd-language-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
systemd_language_server/: __init__.py  constants.py  server.py  unit.py
tests/: conftest.py  test_completion.py  test_server.py
tests/data/: test.service
