[project]
requires-python = ">=3.8"

[tool.poetry]
name = 'systemd-language-server'
version = '0.2.1'
description = 'Language server for systemd unit files'
authors = ["Paweł Sacawa <pawel@sacawa.net>"]
readme = "README.md"
packages = [{ include = "systemd_language_server" }]
scripts = { "systemd-language-server" = "systemd_language_server.server:main" }

[tool.poetry.dependencies]
pygls = "^1.3"
python = "^3.9"

[tool.poetry.dev-dependencies]
lxml = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
