[tool.poetry]
name = 'systemd-language-server'
version = '0.3.4'
description = 'Language server for systemd unit files'
authors = ["Paweł Sacawa <pawel@sacawa.net>"]
readme = "README.md"
packages = [{ include = "systemd_language_server" }]
scripts = { "systemd-language-server" = "systemd_language_server.server:main" }
keywords = ['systemd', 'language', 'server', 'lsp', 'completion']
license = "GPL3.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Utilities",
]

repository = "https://github.com/psacawa/systemd-language-server"


[tool.poetry.dependencies]
pygls = "^1.3"
python = "^3.9"
lxml = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-datadir = "^1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
